# scs-plugin-framework

./: CMakeLists.txt  README.md
include/: Namespace.hpp
include/SPF/: Core.hpp  GameType.hpp  Version.hpp
include/SPF/Config/: Config.hpp  ConfigFieldBase.hpp  ConfigManager.hpp
include/SPF/Config/Fields/: BoolField.hpp  NumericField.hpp  SelectionField.hpp  TextField.hpp
include/SPF/Events/: Event.hpp  EventDispatcher.hpp  EventManager.hpp  EventProxyBase.hpp
include/SPF/Hooks/: D3D11Hook.hpp  DInput8Hook.hpp  OpenGLHook.hpp
include/SPF/Input/: InputManager.hpp
include/SPF/KeyBinding/: KeyBinds.hpp  KeyBindsManager.hpp
include/SPF/Logger/: Logger.hpp  LoggerFactory.hpp
include/SPF/Memory/: Detour.hpp  Hooking.hpp
include/SPF/Modules/: ModuleManager.hpp
include/SPF/Renderer/: D3D11RendererImpl.hpp  OpenGLRendererImpl.hpp  Renderer.hpp
include/SPF/SCSSDK/: ChannelAggregator.hpp  Telemetry.hpp
include/SPF/System/: Keyboard.hpp  Mouse.hpp
include/SPF/UI/: LoggerWindow.hpp  MainWindow.hpp
include/SPF/Utils/: Delegate.hpp  Paths.hpp  Timer.hpp  Utils.hpp  Windows.hpp
src/: Core.cpp  dllmain.cpp
src/Config/: Config.cpp  ConfigManager.cpp
src/Events/: EventManager.cpp
src/Hooks/: D3D11Hook.cpp  DInput8Hook.cpp  OpenGLHook.cpp
src/Input/: InputManager.cpp
src/KeyBinding/: KeyBinds.cpp  KeyBindsManager.cpp
src/Logger/: Logger.cpp  LoggerFactory.cpp
src/Memory/: Detour.cpp  Hooking.Patterns.cpp
src/Modules/: ModuleManager.cpp
src/Renderer/: D3D11RendererImpl.cpp  OpenGLRendererImpl.cpp  Renderer.cpp
src/SCSSDK/: ChannelAggregator.cpp
src/System/: Mouse.cpp
src/UI/: LoggerWindow.cpp  MainWindow.cpp
src/Utils/: Paths.cpp  Utils.cpp  Windows.cpp
